force-app/main/default/objects/Rice_Detail__c/Rice_Detail__c.object-meta.xml
<CustomObject>
    <label>Rice Detail</label>
    <nameField>
        <displayFormat>Rice-{000}</displayFormat>
        <label>Rice Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>