force-app/main/default/objects/Rice_Detail__c/fields/Rice_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Rice_Distributed__c</fullName>
    <label>Rice Distributed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>