force-app/main/default/objects/Rice_Detail__c/fields/Rice_Mill_1_one__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_1_one__c</fullName>
    <label>Rice Mill 1(one)</label>
    <referenceTo>Rice_Mill__c</referenceTo>
    <relationshipLabel>Rice Details</relationshipLabel>
    <relationshipName>Rice_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>