force-app/main/default/objects/Rice_Detail__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Rice Details</relationshipLabel>
    <relationshipName>Rice_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>